// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnsavedChangesPrompt /> renders correctly with null message 1`] = `
Array [
  <div />,
  <div
    setIsEdited={[Function]}
  />,
]
`;

exports[`<UnsavedChangesPrompt /> renders correctly with props 1`] = `
Array [
  <div>
    Niezapisane zmiany zostaną utracone.
  </div>,
  <div
    setIsEdited={[Function]}
  />,
]
`;
